--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "build:ssr": "ng build && npm run serve:ssr:Dreadful-Tomato",
     "serve:ssr:Dreadful-Tomato": "node dist/dreadful-tomato/server/server.mjs"
   },
   "private": true,
